<resources>
    <string name="app_name">Newsie</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="world_news">World News</string>
    <string name="business_news">Business news</string>
    <string name="sport_news">Sports news</string>
    <string name="it_news">IT News</string>
    <string name="other">Other</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
</resources>
